Reverted to edit edt-4c88a8e2-a0b2-46dc-bde7-6373ba405c93: "Fix: Remove scrollbar spacing
Remove the space between the scrollbar and the right edge of the page."

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -110,13 +109,11 @@
   *::-webkit-scrollbar,
   body::-webkit-scrollbar,
   html::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
+    width: 1.5px;
+    height: 1.5px;
     display: block;
     position: absolute;
     right: 0;
-    margin: 0;
-    padding: 0;
   }
 
   *::-webkit-scrollbar-track,
